--- a/CalculatorApp/index.html
+++ b/CalculatorApp/index.html
@@ -6,14 +6,30 @@
 <script type="text/javascript" src="js/Calculator.js"></script>
 </head>
 <body>
-    <h1>hellooooo</h1>
-    <label>Enter the first number:</label>
-    <input type="number" id="num1"/><br/>
-<label>Enter the second number :</label>
-    <input type="number" id="num2"/><br/>
-    <button type="submit" id="add_button" onclick="add(document.getElementById('num1').value,document.getElementById('num2').value)">Add</button>
-    <button type="submit" id="add_button" onclick="sub(document.getElementById('num1').value,document.getElementById('num2').value)">Subtract</button>
-    <button type="submit" id="add_button" onclick="multiply(document.getElementById('num1').value,document.getElementById('num2').value)">Multiply</button>
-    <button type="submit" id="add_button" onclick="devide(document.getElementById('num1').value,document.getElementById('num2').value)">Divide</button>
+    <h1>Arithmatic Calculator</h1>
+    
+    <label>Enter the first number:</label> <input type="number" id="num1"/><br/>
+    <label>Enter the second number:</label> <input type="number" id="num2"/><br/>
+    
+    <div>
+    <button type="submit" id="add_button" onclick="doCalculation('+')">+</button>
+    <button type="submit" id="add_button" onclick="doCalculation('-')">-</button>
+    <button type="submit" id="add_button" onclick="doCalculation('*')">*</button>
+    <button type="submit" id="add_button" onclick="doCalculation('/')">/</button>
+     </div>
+    <br/> <br/>
+    <label id ="result"></label>
+<script>
+ function doCalculation(opcode){
+       var num1 = document.getElementById('num1').value;
+       var num2 = document.getElementById('num2').value;
+       var result = doMaths(opcode,num1,num2);// Call the maths logic inside Calculator.js class
+       if(result.isSuccessful==true){
+       document.getElementById('result').innerHTML = "The result is:" +result.result;
+       }else {
+        document.getElementById('result').innerHTML = "The result is:" + result.error;
+       }
+ }
+</script>
 </body>
 </html>
